# 10x_Path_Smoothing

./: README.md  TECHNICAL_DOCUMENTATION.md  main.py  requirements.txt
examples/: basic_smoothing_demo.py  obstacle_avoidance_demo.py  trajectory_following_demo.py
ros2_integration/: CMakeLists.txt  README.md  setup.sh
ros2_integration/config/: path_smoothing.rviz
ros2_integration/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_integration/install/path_smoothing_turtlebot/share/path_smoothing_turtlebot/: package.bash  package.zsh
ros2_integration/launch/: demo_launch.py  path_smoothing_only.launch.py  simple_demo_launch.py  turtlebot_path_smoothing.launch.py
ros2_integration/log/: latest_build
ros2_integration/scripts/: fake_robot_node.py  obstacle_avoidance_node.py  path_smoothing_node.py  simple_path_smoothing_node.py  simple_trajectory_controller_node.py  trajectory_controller_node.py  waypoint_publisher_node.py
ros2_integration/worlds/: path_smoothing_world.world
src/obstacle_avoidance/: __init__.py  dynamic_window.py
src/path_smoothing/: __init__.py  bezier_smoother.py  bspline_smoother.py  spline_smoother.py
src/trajectory_control/: __init__.py  differential_drive.py  pid_controller.py  pure_pursuit.py  stanley_controller.py
src/utils/: __init__.py  geometry.py
tests/: test_path_smoothing.py  test_trajectory_control.py
turtlebot_ws/install/: local_setup.sh  setup.sh
turtlebot_ws/log/: latest_build
turtlebot_ws/src/turtlebot_path_smoothing/: setup.cfg  setup.py
(+10 files in other folders)
